--- a/content/ko/about/_index.html
+++ b/content/ko/about/_index.html
@@ -1,5 +1,5 @@
 ---
-title: About Goldydocs
+title: About ByServices
 linkTitle: About
 menu:
   main:
@@ -8,15 +8,15 @@ menu:
 ---
 
 
-{{< blocks/cover title="About Goldydocs" image_anchor="bottom" height="min" >}}
+{{< blocks/cover title="About ByServices" image_anchor="bottom" height="min" >}}
 
-<p class="lead mt-5">A sample site using the Docsy Hugo theme.
+<p class="lead mt-5">ByServices에 대한 소개 페이지입니다.
 </p>
 
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Goldydocs is a sample site using the <a href="https://github.com/google/docsy">Docsy</a> Hugo theme that shows what it can do and provides you with a template site structure. It’s designed for you to clone and edit as much as you like. See the different sections of the documentation and site for more ideas.
+ByServices는 Biyard와 MadApp이 함께 만들어 나가는 Web 3.0 시대의 표준입니다.
 {{% /blocks/lead %}}
 
 
