--- a/content/ko/_index.html
+++ b/content/ko/_index.html
@@ -5,6 +5,9 @@ linkTitle = "ByServices"
 +++
 
 {{< blocks/cover title="Welcome to ByServices docs!" image_anchor="top" height="full" color="orange" >}}
+<script>
+ window.location.href = "/docs";
+</script>
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
