add comments for temporary rendering

--- a/content/ko/_index.html
+++ b/content/ko/_index.html
@@ -8,16 +8,16 @@ linkTitle = "ByServices"
 <script>
  window.location.href = "/docs";
 </script>
-<div class="mx-auto">
-	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
-		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
-	</a>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://factory.biyard.co" target="_blank">
-		ByFactory <i class="fas fa-arrow-alt-circle-right ml-2"></i>
-	</a>
-	<p class="lead mt-5">Porridge temperature assessment - in the cloud!</p>
-	{{< blocks/link-down color="info" >}}
-</div>
+<!-- <div class="mx-auto">
+	   <a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
+		 Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	   </a>
+	   <a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://factory.biyard.co" target="_blank">
+		 ByFactory <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	   </a>
+	   <p class="lead mt-5">Porridge temperature assessment - in the cloud!</p>
+	   {{< blocks/link-down color="info" >}}
+     </div> -->
 {{< /blocks/cover >}}
 
 
